--- a/package.json
+++ b/package.json
@@ -8,23 +8,26 @@
   },
   "dependencies": {
     "@vssue/api-github-v4": "^1.4.7",
-    "@vssue/vuepress-plugin-vssue": "^1.4.8"
+    "@vssue/vuepress-plugin-vssue": "^1.4.8",
+    "highlight.js": "^11.6.0",
+    "nth-check": "^2.1.1"
   },
   "devDependencies": {
-    "@vuepress/plugin-active-header-links": "^1.9.5",
-    "@vuepress/plugin-google-analytics": "^1.9.5",
-    "@vuepress/plugin-pwa": "^1.9.5",
-    "dayjs": "^1.10.7",
+    "@vuepress/plugin-active-header-links": "^1.9.7",
+    "@vuepress/plugin-google-analytics": "^1.9.7",
+    "@vuepress/plugin-pwa": "^1.9.7",
+    "dayjs": "^1.11.4",
     "vue-feather-icons": "^5.1.0",
-    "vuepress": "^1.9.5",
+    "vuepress": "^1.9.7",
     "vuepress-plugin-rss": "^2.0.0",
     "vuepress-plugin-sitemap": "^2.3.1"
   },
   "resolutions": {
-    "ws": "8.2.2",
     "glob-parent": "6.0.2",
-    "nth-check": "^2.0.1",
-    "highlight.js": "^11.3.1",
-    "ansi-regex": "^5.0.1"
+    "node-forge":"1.3.1",
+    "nth-check": "2.1.1",
+    "markdown-it": "13.0.1",
+    "highlight.js": "11.6.0",
+    "got": "12.3.1"
   }
 }
